welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:5: error: illegal start of simple expression
  if ((outsideMode== true )&&(n>=0)&&n<=1)){
                                          ^